# taligent_serving_DT

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/config/: .pylintrc
.github/workflows/: .pylintrc  codeql.yml  deploy-production.yaml  pylint.yml  test.yaml
models/: best_forecast_model.pkl
serving/: dockerfile  main.py  pylint.yml  requirements.txt
tests/: conftest.py  test_main.py  test_model_loading.py  test_utils.py
training/: training.py
