[project]
name = "taligent-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Gasch",email = "eldie1984@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "google-auth (>=2.54.0,<3.0.0)",
    "google-cloud-bigquery[pandas] (>=3.41.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false