[project]
name = "taligent-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Gasch",email = "eldie1984@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "google-auth (>=2.54.0,<3.0.0)",
    "google-cloud-bigquery[pandas] (>=3.41.0,<4.0.0)",
    "google-cloud-storage (>=2.18.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.32.0,<1.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "joblib (>=1.4.0,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "*"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
moto = "^5.0.0"
pytest-cov = "^5.0.0"
mypy = "^2.1.0"
pandas-stubs = "^3.0.3.260530"
types-google-cloud-ndb = "^2.4.0.20260518"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
incremental = false

# This block forces Mypy to treat anything coming from google as untyped, 
# preventing the internal parser from looking too deep and crashing.
[[tool.mypy.overrides]]
module = [
    "google.*",
    "google.cloud.*"
]
ignore_missing_imports = true
follow_imports = "skip"